# equitas_paddleOCR

./: .dockerignore  .gitignore  1.16.0  Dockerfile  Procfile  README.md  main.py  nixpacks.toml  package-lock.json  pyproject.toml  requirements.txt  start.py  test_insert.py  test_ocr.py  test_pdf.py
app/: __init__.py  config.py  image_io.py  ocr_service.py  paddle_config.py  pdf_utils.py  routes.py  schemas.py  security.py
tests/: __init__.py  test_api.py
